--- a/src/views/AddToken/AddToken.css
+++ b/src/views/AddToken/AddToken.css
@@ -10,7 +10,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  /* border: 1px solid red; */
   width: 490px;
   align-self: center;
+}
+
+.page-title-container h3 {
+  font-size: 1.6rem;
 }
