--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,5 @@
 .btn {
   cursor: pointer;
-  margin-left: 80px;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
@@ -12,6 +11,8 @@
   background-color: #aa33b5;
   border-radius: 8px;
   color: #fff;
+  display: inline;
+  z-index: 2;
 }
 
 .btn.klever-back-btn {
@@ -21,4 +22,17 @@
 
 .klever-primary-btn:hover {
   background-color: #82218f;
+}
+
+.btn.klever-delete-btn {
+  background-color: #930000;
+  color: #fff;
+  border: none;
+}
+
+.delete-token {
+  display: inline;
+  position: relative;
+  top: 70px;
+  width: 100%;
 }
